# mscthesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: EnableAsserts.cmake  FindGMP.cmake  UtUtils.cmake
cmake/modules/: GMP.cmake
dependencies/: CMakeLists.txt
final_output/: quad_product_int1.txt  quad_product_int2.txt  quad_product_node.txt  quad_product_side.txt  quad_trunk_int1.txt  quad_trunk_int2.txt  quad_trunk_node.txt  quad_trunk_side.txt  tri_product_int.txt  tri_product_node.txt  tri_product_side1.txt  tri_product_side2.txt  tri_trunk_int.txt  tri_trunk_node.txt  tri_trunk_side1.txt  tri_trunk_side2.txt
latex/: aaltothesis.cls  refs.bib  thesis.tex
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/common/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  LinearSolver.cpp  LinearSolver.hpp  Timer.cpp  Timer.hpp
src/apps/common/meshfiles/: QuadMesh2x2.txt  QuadMesh4x4.txt  TriangleMesh2x2.txt  TriangleMesh4x4.txt
src/apps/dirac/: CMakeLists.txt  DiracPfemMain.cpp
src/apps/dirac/py/: plotter.py
src/apps/dirac/utils/: CMakeLists.txt  GreensFunction.cpp  GreensFunction.hpp  L2Error.cpp  L2Error.hpp
src/apps/refdata/: CMakeLists.txt  GenerateDiracLoadHeaderMain.cpp  GenerateNeumannLoadHeaderMain.cpp  GenerateStiffnessMatrixHeaderMain.cpp  Utils.cpp  Utils.hpp
src/fem/: CMakeLists.txt
src/fem/assembly/: CMakeLists.txt  DiracLoadVector.cpp  DiracLoadVector.hpp  LoadVector.cpp  LoadVector.hpp  NeumannLoadVector.cpp  NeumannLoadVector.hpp  StiffnessMatrix.cpp  StiffnessMatrix.hpp
src/fem/assembly/ut/: CMakeLists.txt  DiracLoadVectorTest.cpp  LoadVectorTest.cpp  NeumannLoadVectorTest.cpp  ReferenceBoundaryFunctions.hpp  StiffnessMatrixTest.cpp
src/fem/assembly/ut/refdata/dirac_load1/: RefDiracLoadVector1.hpp  args.txt
src/fem/assembly/ut/refdata/dirac_load2/: RefDiracLoadVector2.hpp  args.txt
src/fem/assembly/ut/refdata/dirac_load3/: RefDiracLoadVector3.hpp  args.txt
src/fem/assembly/ut/refdata/neumann_load1/: RefNeumannLoadVector1.hpp  args.txt  mesh.txt
src/fem/assembly/ut/refdata/neumann_load2/: RefNeumannLoadVector2.hpp  args.txt
src/fem/assembly/ut/refdata/stiffness_matrix1/: RefStiffnessMatrix1.hpp  args.txt
src/fem/assembly/ut/refdata/stiffness_matrix2/: RefStiffnessMatrix2.hpp  args.txt
src/fem/assembly/ut/refdata/stiffness_matrix3/: RefStiffnessMatrix3.hpp  args.txt
src/fem/basis/: BasisFunctionDescriptor.hpp  BasisFunctionFactory.cpp  BasisFunctionFactory.hpp  BasisFunctionIndexer.cpp  BasisFunctionIndexer.hpp  CMakeLists.txt  FemContext.hpp  PolynomialSpaceType.hpp  ShapeFunctionDescriptor.hpp  ShapeFunctionEvaluator.cpp  ShapeFunctionEvaluator.hpp  ShapeFunctionFactory.cpp  ShapeFunctionFactory.hpp  ShapeFunctionIndexer.cpp  ShapeFunctionIndexer.hpp  TrialFunction.cpp  TrialFunction.hpp
src/fem/basis/ut/: BasisFunctionFactoryTest.cpp  BasisFunctionIndexerTest.cpp  CMakeLists.txt  ShapeFunctionFactoryTest.cpp  ShapeFunctionIndexerTest.cpp  TrialFunctionTest.cpp
src/fem/domain/: CMakeLists.txt  Element.cpp  Element.hpp  Mesh.cpp  Mesh.hpp  Node.hpp  Parallelogram.cpp  Parallelogram.hpp  Side.cpp  Side.hpp  Triangle.cpp  Triangle.hpp
src/fem/domain/ut/: CMakeLists.txt  ElementTest.cpp  MeshTest.cpp  SideTest.cpp
src/fem/math/: AffineMap.cpp  AffineMap.hpp  CMakeLists.txt  Function.hpp  Polynomial.hpp  Quadrature.cpp  Quadrature.hpp
src/fem/math/polynomial/: CMakeLists.txt  Monomial1D.cpp  Monomial1D.hpp  Monomial2D.cpp  Monomial2D.hpp  Polynomial1D.cpp  Polynomial1D.hpp  Polynomial2D.cpp  Polynomial2D.hpp  PolynomialCalculus.cpp  PolynomialCalculus.hpp  PolynomialComposition.cpp  PolynomialComposition.hpp  PolynomialStringUtils.cpp  PolynomialStringUtils.hpp
src/fem/math/polynomial/ut/: CMakeLists.txt  Monomial1DTest.cpp  Monomial2DTest.cpp  Polynomial1DTest.cpp  Polynomial2DTest.cpp  PolynomialCalculusTest.cpp  PolynomialCompositionTest.cpp  PolynomialStringUtilsTest.cpp
src/fem/math/quadrature/: CMakeLists.txt  GaussLegendreTable1D.cpp  GaussLegendreTable1D.hpp  GaussLegendreTableQuadrilateral.cpp  GaussLegendreTableQuadrilateral.hpp  GaussLegendreTableTriangle.cpp  GaussLegendreTableTriangle.hpp  Quadrature1D.cpp  Quadrature1D.hpp  Quadrature2D.cpp  Quadrature2D.hpp
src/fem/math/quadrature/ut/: CMakeLists.txt  Quadrature1DTest.cpp  Quadrature2DTest.cpp
src/fem/math/ut/: AffineMapTest.cpp  CMakeLists.txt  QuadratureTest.cpp
src/fem/multiprecision/: Arithmetic.cpp  Arithmetic.hpp  CMakeLists.txt  Types.hpp
src/fem/multiprecision/ut/: CMakeLists.txt  MpArithmeticTest.cpp
